- Align text - Update fixtures test

--- a/imports/plugins/included/default-theme/client/styles/dashboard/shippingConfig.less
+++ b/imports/plugins/included/default-theme/client/styles/dashboard/shippingConfig.less
@@ -5,3 +5,10 @@
 .shippo-carrier-status i.disabled, i.disabled {
   color: @black10;
 }
+
+.parcel-setting {
+  border: 1px solid red;
+  .rui.card-header .content-view {
+    .padding-left(22px);
+  }
+}
